@@ -9,70 +9,114 @@
  */
 
 /* Define if building universal (internal helper macro) */
+#ifndef RIVET_AC_APPLE_UNIVERSAL_BUILD
 #cmakedefine RIVET_AC_APPLE_UNIVERSAL_BUILD @AC_APPLE_UNIVERSAL_BUILD@
+#endif
 
 /* configure command string */
+#ifndef RIVET_CONFIGURE_CMD
 #cmakedefine RIVET_CONFIGURE_CMD "@CONFIGURE_CMD@"
+#endif
 
 /* Display Rivet version in Apache signature */
-#cmakedefine RIVET_DISPLAY_VERSION @DISPLAY_VERSION@
+#ifndef RIVET_DISPLAY_VERSION
+#cmakedefine01 RIVET_DISPLAY_VERSION
+#endif
 
 /* Define to 1 if you have the <dlfcn.h> header file. */
+#ifndef RIVET_HAVE_DLFCN_H
 #cmakedefine RIVET_HAVE_DLFCN_H @HAVE_DLFCN_H@
+#endif
 
 /* Define to 1 if you have the <inttypes.h> header file. */
+#ifndef RIVET_HAVE_INTTYPES_H
 #cmakedefine RIVET_HAVE_INTTYPES_H @HAVE_INTTYPES_H@
+#endif
 
 /* Define to 1 if you have the <limits.h> header file. */
+#ifndef RIVET_HAVE_LIMITS_H
 #cmakedefine RIVET_HAVE_LIMITS_H @HAVE_LIMITS_H@
+#endif
 
 /* Define to 1 if you have the `lseek64' function. */
+#ifndef RIVET_HAVE_LSEEK64
 #cmakedefine RIVET_HAVE_LSEEK64 @HAVE_LSEEK64@
+#endif
 
 /* Define to 1 if you have the <memory.h> header file. */
+#ifndef RIVET_HAVE_MEMORY_H
 #cmakedefine RIVET_HAVE_MEMORY_H @HAVE_MEMORY_H@
+#endif
 
 /* Define to 1 if you have the <net/errno.h> header file. */
+#ifndef RIVET_HAVE_NET_ERRNO_H
 #cmakedefine RIVET_HAVE_NET_ERRNO_H @HAVE_NET_ERRNO_H@
+#endif
 
 /* Define to 1 if you have the `open64' function. */
+#ifndef RIVET_HAVE_OPEN64
 #cmakedefine RIVET_HAVE_OPEN64 @HAVE_OPEN64@
+#endif
 
 /* Define to 1 if you have the <stdint.h> header file. */
+#ifndef RIVET_HAVE_STDINT_H
 #cmakedefine RIVET_HAVE_STDINT_H @HAVE_STDINT_H@
+#endif
 
 /* Define to 1 if you have the <stdlib.h> header file. */
+#ifndef RIVET_HAVE_STDLIB_H
 #cmakedefine RIVET_HAVE_STDLIB_H @HAVE_STDLIB_H@
+#endif
 
 /* Define to 1 if you have the <strings.h> header file. */
+#ifndef RIVET_HAVE_STRINGS_H
 #cmakedefine RIVET_HAVE_STRINGS_H @HAVE_STRINGS_H@
+#endif
 
 /* Define to 1 if you have the <string.h> header file. */
+#ifndef RIVET_HAVE_STRING_H
 #cmakedefine RIVET_HAVE_STRING_H @HAVE_STRING_H@
+#endif
 
 /* Is 'struct dirent64' in <sys/types.h>? */
-/* #undef HAVE_STRUCT_DIRENT64 */
+#ifndef RIVET_HAVE_STRUCT_DIRENT64
+#cmakedefine RIVET_HAVE_STRUCT_DIRENT64 @HAVE_STRUCT_DIRENT64@
+#endif
 
 /* Is 'struct stat64' in <sys/stat.h>? */
-/* #undef HAVE_STRUCT_STAT64 */
+#ifndef RIVET_HAVE_STRUCT_STAT64
+#cmakedefine RIVET_HAVE_STRUCT_STAT64 @HAVE_STRUCT_STAT64@
+#endif
 
 /* Define to 1 if you have the <sys/param.h> header file. */
+#ifndef RIVET_HAVE_SYS_PARAM_H
 #cmakedefine RIVET_HAVE_SYS_PARAM_H @HAVE_SYS_PARAM_H@
+#endif
 
 /* Define to 1 if you have the <sys/stat.h> header file. */
+#ifndef RIVET_HAVE_SYS_STAT_H
 #cmakedefine RIVET_HAVE_SYS_STAT_H @HAVE_SYS_STAT_H@
+#endif
 
 /* Define to 1 if you have the <sys/types.h> header file. */
+#ifndef RIVET_HAVE_SYS_TYPES_H
 #cmakedefine RIVET_HAVE_SYS_TYPES_H @HAVE_SYS_TYPES_H@
+#endif
 
 /* Is off64_t in <sys/types.h>? */
-/* #undef HAVE_TYPE_OFF64_T */
+#ifndef RIVET_HAVE_TYPE_OFF64_T
+#cmakedefine RIVET_HAVE_TYPE_OFF64_T @HAVE_TYPE_OFF64_T@
+#endif
 
 /* Define to 1 if you have the <unistd.h> header file. */
+#ifndef RIVET_HAVE_UNISTD_H
 #cmakedefine RIVET_HAVE_UNISTD_H @HAVE_UNISTD_H@
+#endif
 
 /* Honor HEAD requests */
+#ifndef RIVET_HEAD_REQUESTS
 #cmakedefine01 RIVET_HEAD_REQUESTS
+#endif
 
 /* Rivet Tcl package version */
 #ifndef RIVET_INIT_VERSION
@@ -95,7 +139,9 @@
 #endif
 
 /* yes, MPM worker single thread */
+#ifndef RIVET_MPM_SINGLE_TCL_THREAD
 #cmakedefine RIVET_MPM_SINGLE_TCL_THREAD @MPM_SINGLE_TCL_THREAD@
+#endif
 
 /* The path to a working tclsh executable */
 #ifndef RIVET_NAMEOFEXECUTABLE
@@ -103,42 +149,70 @@
 #endif
 
 /* commands will not be exported */
+#ifndef RIVET_NAMESPACE_EXPORT
 #cmakedefine01 RIVET_NAMESPACE_EXPORT
+#endif
 
 /* good, no automatic import will be done */
+#ifndef RIVET_NAMESPACE_IMPORT
 #cmakedefine01 RIVET_NAMESPACE_IMPORT
+#endif
 
 /* Define to 1 if you have the <dirent.h> header file, and it defines `DIR'.  */
+#ifndef RIVET_HAVE_DIRENT_H
 #cmakedefine RIVET_HAVE_DIRENT_H @HAVE_DIRENT_H@
+#endif
+#ifndef RIVET_NO_DIRENT_H
 #cmakedefine RIVET_NO_DIRENT_H @NO_DIRENT_H@
+#endif
 
 /* Do we have <dlfcn.h>? */
+#ifndef RIVET_NO_DLFCN_H
 #cmakedefine RIVET_NO_DLFCN_H @NO_DLFCN_H@
+#endif
 
 /* Do we have <errno.h>? */
+#ifndef RIVET_NO_ERRNO_H
 #cmakedefine RIVET_NO_ERRNO_H @NO_ERRNO_H@
+#endif
 
 /* Do we have <float.h>? */
+#ifndef RIVET_NO_FLOAT_H
 #cmakedefine RIVET_NO_FLOAT_H @NO_FLOAT_H@
+#endif
 
 /* Define to 1 if you have the <limits.h> header file. */
+#ifndef RIVET_HAVE_LIMITS_H
 #cmakedefine RIVET_HAVE_LIMITS_H @HAVE_LIMITS_H@
+#endif
+#ifndef RIVET_NO_LIMITS_H
 #cmakedefine RIVET_NO_LIMITS_H @NO_LIMITS_H@
+#endif
 
 /* Do we have <stdlib.h>? */
+#ifndef RIVET_NO_STDLIB_H
 #cmakedefine RIVET_NO_STDLIB_H @NO_STDLIB_H@
+#endif
 
 /* Do we have <string.h>? */
+#ifndef RIVET_NO_STRING_H
 #cmakedefine RIVET_NO_STRING_H @NO_STRING_H@
+#endif
 
 /* Do we have <sys/wait.h>? */
+#ifndef RIVET_NO_SYS_WAIT_H
 #cmakedefine RIVET_NO_SYS_WAIT_H @NO_SYS_WAIT_H@
+#endif
 
 /* Do we have <values.h>? */
+#ifndef RIVET_NO_VALUES_H
 #cmakedefine RIVET_NO_VALUES_H @NO_VALUES_H@
+#endif
 
 /* No description provided for NO_VIZ... */
+#ifndef RIVET_NO_VIZ
 #cmakedefine RIVET_NO_VIZ
+#endif
 
 /* Name of package */
 #ifndef RIVET_PACKAGE
@@ -196,28 +270,44 @@
 #endif
 
 /* requests will be serialized */
+#ifndef RIVET_SERIALIZE_HTTP_REQUESTS
 #cmakedefine RIVET_SERIALIZE_HTTP_REQUESTS @SERIALIZE_HTTP_REQUESTS@
+#endif
 
 /* Is this a static build? */
+#ifndef RIVET_STATIC_BUILD
 #cmakedefine RIVET_STATIC_BUILD @STATIC_BUILD@
+#endif
 
 /* Define to 1 if you have the ANSI C header files. */
+#ifndef RIVET_STDC_HEADERS
 #cmakedefine RIVET_STDC_HEADERS @STDC_HEADERS@
+#endif
 
 /* Is memory debugging enabled? */
+#ifndef RIVET_TCL_MEM_DEBUG
 #cmakedefine RIVET_TCL_MEM_DEBUG @TCL_MEM_DEBUG@
+#endif
 
 /* Are we building with threads enabled? */
-#cmakedefine RIVET_TCL_THREADS @TCL_THREADS@
+#ifndef RIVET_TCL_THREADS
+#cmakedefine RIVET_TCL_THREADS 1
+#endif
 
 /* Are wide integers to be implemented with C 'long's? */
+#ifndef RIVET_TCL_WIDE_INT_IS_LONG
 #cmakedefine RIVET_TCL_WIDE_INT_IS_LONG @TCL_WIDE_INT_IS_LONG@
+#endif
 
 /* What type should be used to define wide integers? */
+#ifndef RIVET_TCL_WIDE_INT_TYPE
 #cmakedefine RIVET_TCL_WIDE_INT_TYPE @TCL_WIDE_INT_TYPE@
+#endif
 
 /* UNDER_CE version */
+#ifndef RIVET_UNDER_CE
 #cmakedefine RIVET_UNDER_CE @UNDER_CE@
+#endif
 
 /* Path to the disk directory where uploads are saved */
 #ifndef RIVET_UPLOAD_DIR
@@ -252,7 +342,9 @@
 #endif
 
 /* Add the _ISOC99_SOURCE flag when building */
+#ifndef RIVET__ISOC99_SOURCE
 #cmakedefine RIVET__ISOC99_SOURCE @_ISOC99_SOURCE@
+#endif
 
 /* Add the _LARGEFILE64_SOURCE flag when building */
 #ifndef RIVET__LARGEFILE64_SOURCE
@@ -260,25 +352,39 @@
 #endif
 
 /* Add the _LARGEFILE_SOURCE64 flag when building */
+#ifndef RIVET__LARGEFILE_SOURCE64
 #cmakedefine RIVET__LARGEFILE_SOURCE64 @_LARGEFILE_SOURCE64@
+#endif
 
 /* # needed in sys/socket.h Should OS/390 do the right thing with sockets? */
+#ifndef RIVET__OE_SOCKETS
 #cmakedefine RIVET__OE_SOCKETS @_OE_SOCKETS@
+#endif
 
 /* Do we really want to follow the standard? Yes we do! */
+#ifndef RIVET__POSIX_PTHREAD_SEMANTICS
 #cmakedefine RIVET__POSIX_PTHREAD_SEMANTICS @_POSIX_PTHREAD_SEMANTICS@
+#endif
 
 /* Do we want the reentrant OS API? */
+#ifndef RIVET__REENTRANT
 #cmakedefine RIVET__REENTRANT @_REENTRANT@
+#endif
 
 /* Do we want the thread-safe OS API? */
+#ifndef RIVET__THREAD_SAFE
 #cmakedefine RIVET__THREAD_SAFE @_THREAD_SAFE@
+#endif
 
 /* _WIN32_WCE version */
+#ifndef RIVET__WIN32_WCE
 #cmakedefine RIVET__WIN32_WCE @_WIN32_WCE@
+#endif
 
 /* Do we want to use the XOPEN network library? */
+#ifndef RIVET__XOPEN_SOURCE_EXTENDED
 #cmakedefine RIVET__XOPEN_SOURCE_EXTENDED @_XOPEN_SOURCE_EXTENDED@
+#endif
 
 /* Define to `__inline__' or `__inline' if that's what the C compiler
    calls it, or to nothing if 'inline' is not supported under any name.  */
